Added OAutrh: Implemented Sign in with Google

--- a/BackEnd/WebBlog/views/pages/error.ejs
+++ b/BackEnd/WebBlog/views/pages/error.ejs
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <title>Blog : Error</title>
-    <link rel="stylesheet" href="styles/error.css">
+    <link rel="stylesheet"
+        href="styles/error.css">
 </head>
 
-	<body>
-		<div class="full-page-image">
-			<div class="content">
+<body>
+    <div class="full-page-image">
+        <div class="content">
 
-
-			</div>
-		</div>
-	</body>
+        </div>
+    </div>
+</body>
 
 </html>
