--- a/BackEnd/WebBlog/views/pages/editor.ejs
+++ b/BackEnd/WebBlog/views/pages/editor.ejs
@@ -1,39 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <title>Blog : Editor</title>
 
-    <link rel="stylesheet" href="/styles/home.css">
-    <link rel="stylesheet" href="/styles/editor.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="stylesheet"
+        href="/styles/home.css">
+    <link rel="stylesheet"
+        href="/styles/editor.css">
+    <link rel="stylesheet"
+        href="/styles/navbar.css">
 
 </head>
+
 <body>
     <%- include('../partials/header')%>
 
-<form action="/publish" method="post">
+    <form action="/publish"
+        method="post">
 
-    <div class="banner">
-        <input type="file" accept="image/*" id="banner-upload" hidden>
-        <label for="banner-upload" class="banner-upload-btn"><img src="img/upload.png" alt="upload banner"></label>
-    </div>
-    
-    <div class="blog">
-        <textarea type="text" class="title" name="title" placeholder="Blog title..." required></textarea>
-        <textarea type="text" class="article" name="article" placeholder="Start writing here..." required></textarea>
-    </div>
+        <div class="banner">
+            <input type="file"
+                accept="image/*"
+                id="banner-upload"
+                hidden>
+            <label for="banner-upload"
+                class="banner-upload-btn"><img
+                    src="img/upload.png"
+                    alt="upload banner"></label>
+        </div>
 
-    <div class="blog-options">
-        <button class="btn dark publish-btn" for="image-upload" type="submit">Publish</button>
-        <input type="file" accept="image/*" id="image-upload" hidden>
-        <!-- <label for="image-upload" class="btn grey upload-btn">Upload Image</label> -->
-    </div>
-</form>
+        <div class="blog">
+            <textarea type="text"
+                class="title"
+                name="title"
+                placeholder="Blog title..."
+                required></textarea>
+            <textarea type="text"
+                class="article"
+                name="article"
+                placeholder="Start writing here..."
+                required></textarea>
+        </div>
+
+        <div class="blog-options">
+            <button
+                class="btn dark publish-btn"
+                for="image-upload"
+                type="submit">Publish</button>
+            <input type="file"
+                accept="image/*"
+                id="image-upload"
+                hidden>
+            <!-- <label for="image-upload" class="btn grey upload-btn">Upload Image</label> -->
+        </div>
+    </form>
 
     <script src="js/editor.js"></script>
-  
+
 </body>
+
 </html>
