--- a/BackEnd/WebBlog/views/pages/home.ejs
+++ b/BackEnd/WebBlog/views/pages/home.ejs
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <title>Blog : Homepage</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="styles/home.css">
+    <link rel="stylesheet"
+        href="/styles/navbar.css">
 
 </head>
+
 <body>
     <%- include('../partials/header')%>
-    
+
     <header class="header">
         <div class="content">
             <h1 class="heading">
-                <span class="small">welcome in the world of</span>
+                <span
+                    class="small">welcome
+                    in the world
+                    of</span>
                 blog
-                <span class="no-fill">writing</span>
+                <span
+                    class="no-fill">writing</span>
             </h1>
             <% if (locals.isAuthenticated) {%>
-                
-                <a href="/editor" class="btn">write a blog</a>
+
+            <a href="/editor"
+                class="btn">write a
+                blog</a>
 
             <%} else {%>
 
-                <a href="/login" class="btn">write a blog</a>
+            <a href="/login"
+                class="btn">write a
+                blog</a>
 
             <% } %>
         </div>
@@ -35,38 +51,43 @@
 
     <section class="articles">
 
-        <h2 class="articles__heading">Latest Posts</h2>
-      
+        <h2 class="articles__heading">
+            Latest Posts</h2>
+
         <ul class="article-ul">
 
-          <ul class="article-ul">
+            <ul class="article-ul">
 
-            <% if (!posts || posts.length === 0) { %>
-              <li>
-                <p>No posts</p>
-              </li>
-            <% } else { %>
-              
-              <% posts.forEach((post) => { %>
+                <% if (!posts || posts.length === 0) { %>
+                <li>
+                    <p>No posts</p>
+                </li>
+                <% } else { %>
+
+                <% posts.forEach((post) => { %>
 
                 <li>
 
-                  <a href="/post/<%= post.date %>">
+                    <a
+                        href="/post/<%= post.date %>">
 
-                    <span><%= post.title %></span>
+                        <span><%= post.title %></span>
 
-                    <span class="article-list__date"><%= new Date(post.date).toDateString() %></span>
-                  </a>
+                        <span
+                            class="article-list__date"><%= new Date(post.date).toDateString() %></span>
+                    </a>
                 </li>
-              <% }) %>
-            <% } %>
-          </ul>
+                <% }) %>
+                <% } %>
+            </ul>
 
         </ul>
 
         <%- include('../partials/footer')%>
 
-<script src="js/home.js"></script>
+        <script src="js/home.js">
+        </script>
 
 </body>
+
 </html>
