--- a/BackEnd/WebBlog/views/pages/nytimes.ejs
+++ b/BackEnd/WebBlog/views/pages/nytimes.ejs
@@ -1,41 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <title>Blog : nytimes</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/joke.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
-    <link rel="stylesheet" href="/styles/nytimes.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="styles/home.css">
+    <link rel="stylesheet"
+        href="styles/joke.css">
+    <link rel="stylesheet"
+        href="/styles/navbar.css">
+    <link rel="stylesheet"
+        href="/styles/nytimes.css">
 
 </head>
+
 <body>
     <%- include('../partials/header')%>
-    
+
     <header class="header">
         <div class="content">
             <h1>Find Article</h1>
-    
-            <form action="/get-articles" method="post">
 
-                <div class="input-field">
+            <form action="/get-articles"
+                method="post">
 
-                    <input type="date" name="date" required>
-                    
+                <div
+                    class="input-field">
+
+                    <input type="date"
+                        name="date"
+                        required>
+
                 </div>
-    
-                <button class="btn" type="submit">GET articles</button>
+
+                <button class="btn"
+                    type="submit">GET
+                    articles</button>
             </form>
         </div>
     </header>
 
     <%- include('../partials/footer')%>
 
-<script src="js/home.js"></script>
+    <script src="js/home.js"></script>
 
 </body>
+
 </html>
