--- a/BackEnd/WebBlog/views/pages/register.ejs
+++ b/BackEnd/WebBlog/views/pages/register.ejs
@@ -1,44 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <title>Blog : Register</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/login.css">
-    <link rel="stylesheet" href="./styles/home.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="./styles/login.css">
+    <link rel="stylesheet"
+        href="./styles/home.css">
+    <link rel="stylesheet"
+        href="/styles/navbar.css">
 
 </head>
+
 <body>
 
-<%- include('../partials/header')%>
+    <%- include('../partials/header')%>
 
-<header>
-    <div class="wrapper">
-        <form action="/register" method="post">
-          <h1 class="heading">
-              <span class="small">Register</span>
-              to
-              <span class="no-fill">Blog</span>
-          </h1>
-            <div class="input-field">
-            <input type="text" name="email" required>
-            <label>Enter your email</label>
-          </div>
-        </h1>
-        <div class="input-field">
-        <input type="text" name="name" required>
-        <label>Enter your name</label>
-      </div>
-          <div class="input-field">
-            <input type="password" name="password" required>
-            <label>Enter your password</label>
-          </div>
-          <button type="submit">Register</button>
-        </form>
-      </div>
- 
-</header>
+    <header>
+        <div class="wrapper">
+            <form action="/register"
+                method="post">
+                <h1 class="heading">
+                    <span
+                        class="small">Register</span>
+                    to
+                    <span
+                        class="no-fill">Blog</span>
+                </h1>
+                <div
+                    class="input-field">
+                    <input type="text"
+                        name="email"
+                        required>
+                    <label>Enter your
+                        email</label>
+                </div>
+                </h1>
+                <div
+                    class="input-field">
+                    <input type="text"
+                        name="name"
+                        required>
+                    <label>Enter your name</label>
+                </div>
+                <div
+                    class="input-field">
+                    <input
+                        type="password"
+                        name="password"
+                        required>
+                    <label>Enter your
+                        password</label>
+                </div>
+                <button
+                    type="submit">Register</button>
+            </form>
+        </div>
+
+    </header>
