--- a/WebBlog/views/pages/joke.ejs
+++ b/WebBlog/views/pages/joke.ejs
@@ -34,6 +34,10 @@
             <p class="delivery">
                 <%= delivery %>
             </p>
+
+            <button class="btn" type="button" onclick="location.reload()">
+                Get New Joke
+            </button>
             
         </div>
     </header>
@@ -41,6 +45,7 @@
     <%- include('../partials/footer')%>
 
     <script src="js/home.js"></script>
+    <script src="../../public/js/joke.js"></script>
 
 </body>
 
