--- a/WebBlog/views/pages/weather.ejs
+++ b/WebBlog/views/pages/weather.ejs
@@ -27,7 +27,7 @@
     <header class="header">
         <div class="content">
 
-            <h1>Cocktail:</h1>
+            <h1>Weather:</h1>
 
             <p><img src="<%= icon %>"
                     alt="icon"
