--- a/WebBlog/views/partials/header.ejs
+++ b/WebBlog/views/partials/header.ejs
@@ -4,8 +4,7 @@
               href="/">Home</a></li>
       <li class="link dropdown">
           <a href="#"
-              class="dropbtn">Public
-              APIs <i
+              class="dropbtn">APIs <i
                   class="fa fa-caret-down"></i></a>
           <div
               class="dropdown-content">
