--- a/WebBlog/public/styles/login.css
+++ b/WebBlog/public/styles/login.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@200;300;400;500;600;700&display=swap");
+
 * {
     margin: 0;
     padding: 0;
@@ -8,25 +9,30 @@
 
 body {
     width: 100%;
-    position: relative;
-    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     margin-top: 60px;
-    height: calc(100vh - 80px);
     background: url(/img/main1.jpg);
     background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 .wrapper {
     width: 400px;
     border-radius: 8px;
     padding: 30px;
+    margin-top: 250px;
     text-align: center;
     border: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 form {
@@ -155,4 +161,55 @@ button:hover {
 
 .bottom-container .btn:hover {
     background: rgba(255, 255, 255, 0.15);
+}
+
+footer {
+    width: 100%;
+    background: #fff;
+    min-height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer .social_icon,
+footer .menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+footer .social_icon li,
+footer .menu li {
+    list-style: none;
+}
+
+footer .social_icon li a {
+    font-size: 2em;
+    color: #ccc;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+footer .social_icon li a:hover {
+    transform: translateY(-15px);
+    color: #A7E6FF;
+}
+
+footer .menu li a {
+    font-size: 1.2em;
+    color: #ccc;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+    text-decoration: none;
+    opacity: 0.75;
+}
+
+footer .menu li a:hover {
+    opacity: 1;
+    color: #fff;
 }
