--- a/WebBlog/views/pages/joke.ejs
+++ b/WebBlog/views/pages/joke.ejs
@@ -15,7 +15,9 @@
     <link rel="stylesheet"
         href="styles/home.css">
     <link rel="stylesheet"
-        href="/styles/navbar.css">
+        href="styles/navbar.css">
+    <link rel="stylesheet"
+        href="styles/joke.css">
 
 </head>
 
@@ -30,8 +32,11 @@
                 <p>
                     <%= setup %>
                 </p>
+
             </div>
+
             <p class="delivery">
+
                 <%= delivery %>
             </p>
 
