--- a/BackEnd/WebBlog/views/pages/stat.ejs
+++ b/BackEnd/WebBlog/views/pages/stat.ejs
@@ -23,6 +23,8 @@
 
 <body>
     <%- include('../partials/header')%>
+
+    <h1> LeetCode Statistics</h1>
     <table>
         <thead>
             <tr>
