--- a/BackEnd/WebBlog/public/styles/home.css
+++ b/BackEnd/WebBlog/public/styles/home.css
@@ -36,6 +36,12 @@ body {
   font-size: 80px;
   line-height: 60px;
   margin-bottom: 80px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .heading .small {
