--- a/BackEnd/WebBlog/views/partials/footer.ejs
+++ b/BackEnd/WebBlog/views/partials/footer.ejs
@@ -1,14 +1,17 @@
 <footer>
   <ul class="social_icon">
-      <li><a href="https://www.facebook.com/gva.vpn"><ion-icon
+      <li><a href="#"><ion-icon
                   name="logo-facebook"></ion-icon></a>
       </li>
-      <li><a href="https://www.linkedin.com/in/cherrymood/"><ion-icon
+      <li><a href="#"><ion-icon
+                  name="logo-twitter"></ion-icon></a>
+      </li>
+      <li><a href="#"><ion-icon
                   name="logo-linkedin"></ion-icon></a>
       </li>
-      <!-- <li><a href="#"><ion-icon
+      <li><a href="#"><ion-icon
                   name="logo-instagram"></ion-icon></a>
-      </li> -->
+      </li>
   </ul>
 </footer>
 <script type="module"
