Work on passport

--- a/BackEnd/WebBlog/views/pages/login.ejs
+++ b/BackEnd/WebBlog/views/pages/login.ejs
@@ -39,19 +39,20 @@
                     </a>
                 </div>
     
-                <div class="col">
+                <!-- <div class="col">
                     <form action="/login" method="post">
                         <div class="input-field">
-                            <input type="text" name="email" required>
                             <label>Enter your email</label>
+                            <input id="email" type="email" name="email" required>
                         </div>
                         <div class="input-field">
-                            <input type="password" name="password" required>
                             <label>Enter your password</label>
+                            <input id="password" type="password" name="password" required>
                         </div>
                         <button type="submit">Log In</button>
                     </form>
                 </div>
+                
             </div>
     
             <div class="bottom-container">
@@ -63,8 +64,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
+        </div> -->
+    </header>   
 
     <%- include('../partials/footer')%>
 
